src/components/navigation-bar/navigation-bar.styles.scss
.navigation {
    height: 100px;
    padding: 16px;

    &__logo {
        display: block;
        height: 100%;
        width: auto;
    }

    &__list {
        list-style: none;
        height: 100%;
    }

    &__link {
        display: inline-block;
        height: 100%;
    }

    &__item {
        height: 100%;
    }
}

